modifies hyf bay helper css file

--- a/javascript/javascript2/week1/main.css
+++ b/javascript/javascript2/week1/main.css
@@ -1,20 +1,32 @@
 body {
-  font-family: "Open Sans", sans-serif;
-  background-color: #f9fbfd;
+  background-color: rgb(0, 0, 0);
+  display: block;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
 }
 
-* {
-  box-sizing: border-box;
+.Tasks {
+  padding-left: 2em;
+  margin: 2em;
 }
 
-body,
-h1,
-h2 {
-  margin: 0;
+.headlines {
+  border: 1px solid black;
+  padding: 1px;
+  font-size: 1.5em;
+  color: red;
+  background-color: burlywood;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.hyfbay {
+  border: 1px dotted coral;
+  display: inline-block;
+}
+
+h3 {
+  color: blueviolet;
+}
+
+p {
+  font-size: 1em;
 }
